# journalist_agent_backend

./: README.md
journalist_crew/: .env  .gitignore  Dockerfile  README.md  chainlit.db  docker-compose.yml  init_chainlit_db.py  journalist_studio.db  launcher.py  nginx.conf  pyproject.toml
journalist_crew/.chainlit/: config.toml
journalist_crew/.chainlit/translations/: en-US.json  sq-AL.json
journalist_crew/public/: favicon  style.css  theme.json
journalist_crew/src/journalist_crew/: crew.py  main.py  manager.py  models.py  pg_storage.py  storage.py  test-ui.py  ui.py
journalist_crew/src/journalist_crew/config/: agents.yaml  tasks.yaml
journalist_crew/src/journalist_crew/tools/: citation_tool.py
