[project]
name = "journalist_crew"
version = "0.1.0"
description = "journalist_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
journalist_crew = "journalist_crew.main:run"
run_crew = "journalist_crew.main:run"
train = "journalist_crew.main:train"
replay = "journalist_crew.main:replay"
test = "journalist_crew.main:test"
run_with_trigger = "journalist_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
