[project]
name = "journalist_crew"
version = "0.1.0"
description = "journalist_crew using crewAI"
authors = [{ name = "Samir Shabani", email = "shabani.samir12@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "chainlit[no-tracking]>=2.9.2",
    "chromadb>=1.1.1",
    "crewai[google-genai,tools]==1.6.1",
    "duckduckgo-search>=8.1.1",
    "langdetect>=1.0.9",
    "litellm>=1.80.7",
    "literalai>=0.1.201",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
journalist_crew = "journalist_crew.main:run"
run_crew = "journalist_crew.main:run"
train = "journalist_crew.main:train"
replay = "journalist_crew.main:replay"
test = "journalist_crew.main:test"
run_with_trigger = "journalist_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
